2011-12-13  Rajarshi Guha  <guhar@citdcssgoldi7lt.cit.nih.gov>

	* Updated NAMESPACE to export the .get.desc.value method

2011-11-01  Rajarshi Guha  <guhar@OfficeMac.local>
	
	* Convert package to use a namespace
	
	* Updated to use CDK 1.4.5

2011-10-04  Rajarshi Guha  <guhar@OfficeMac.local>

	* Updated to latest CDK 1.4.x branch, so that SDF writing now
	properly takes into account aromatic bond types.

2011-08-10  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* man/loadmol.Rd: Added examples for using load.molecules

	* R/iterating.R (hasNext.iload.molecules): Made more robust by
	checking that the file exists before trying to load it

	* R/io.R (load.molecules): If non-existant file is specified we
	now report the error properly

2011-07-23  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>
	
	* Updated to latest CDK library

2011-06-19  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/formula.R (set.charge.formula): Updated default argument to
	match docs

	* man/viewmol2d.Rd: Fixed documentation typo

	* man/setchargeformula.Rd: Fixed documentation error

2011-06-18  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/visual.R (view.molecule.2d): Updated some methods to make use
	of the OS X helper. This allows users on OS X to view single
	molecules in a Swing window and copy PNG depictions to the system clipboard

	* man/props.Rd: Updated man page for the new volume method

	* R/desc.R (get.volume): Added helper method to get molecular
	volume based on the VABC method.

2011-06-11  Rajarshi Guha  <guhar@nida01768669-lt.nida.nih.gov>

	* man/getfp.Rd: Updated fingerprint man page for the new one

	* R/rcdk.R (get.total.formal.charge): Fixed typo in variable name
	(get.fingerprint): Added support for the new Hybridization fingerprinter

	* man/viewmol2d.Rd: Updated man page for the new clipboard
	copy method

	* R/visual.R (copy.image.to.clipboard): Added function
	to copy 2D depiction to system clipboard
