@@ -1,5 +1,5 @@
 Package: rcdk
-Version: 3.1.6
+Version: 3.1.7
 Date: 2012-02-22
 Title: rcdk - Interface to the CDK Libraries
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
