@@ -1,3 +1,9 @@
+2012-02-22  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>
+
+	* R/rcdk.R (get.fingerprint): Updated to manually check for
+	exceptions and if one occurs optionally print it out (depending on
+	the value of he verbose parameter)
+
 2011-12-13  Rajarshi Guha  <guhar@citdcssgoldi7lt.cit.nih.gov>
 
 	* Updated NAMESPACE to export the .get.desc.value method
